Feat: combining shaders implemented

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fastnoise-lite = "1.1.1"
 minifb = "0.26.0"
 nalgebra-glm = "0.18.0"
 rand = "0.8.5"
